--- a/technical-exercise-rn-main/package.json
+++ b/technical-exercise-rn-main/package.json
@@ -6,9 +6,11 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "test": "jest"
   },
   "dependencies": {
+    "@testing-library/react-native": "^12.4.1",
     "expo": "~49.0.3",
     "expo-linear-gradient": "12.3.0",
     "expo-status-bar": "~1.6.0",
@@ -18,8 +20,13 @@
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "@types/jest": "^29.5.11",
     "@types/react": "~18.2.14",
+    "jest-expo": "^49.0.0",
     "typescript": "^5.1.3"
   },
-  "private": true
+  "private": true,
+  "jest": {
+    "preset": "jest-expo"
+  }
 }
